# openping

./: README.md
api/: .env.example  docker-compose.yml  main.py  pyproject.toml
api/modules/auth/: controller.py  cookies.py  route.py  schemas.py  security.py
api/modules/aws_credentials/: model.py
api/modules/contacts/: controller.py  model.py  parser.py  route.py  schemas.py
api/modules/db/: __init__.py  session.py
api/modules/environment_variable_settings/: __init__.py  settings.py
api/modules/middlewares/: __init__.py  auth.py  permissions.py
api/modules/user/: model.py
api/modules/user_roles/: enums.py  model.py  schemas.py  service.py
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/home/: cta.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  section-shell.tsx  transparency.tsx
