[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.138.0",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
    "xlrd>=2.0.2",
]
